[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scenes/messages/message_view.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/messages/typing_indicator.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/messages/composer/composer.tscn" id="3"]

[sub_resource type="StyleBoxFlat" id="message_area_bg"]
bg_color = Color(0.212, 0.224, 0.247, 1)
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0

[node name="MessageView" type="PanelContainer"]
offset_right = 500.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("message_area_bg")
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MessageList" type="VBoxContainer" parent="VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="OlderMessagesBtn" type="Button" parent="VBox/ScrollContainer/MessageList"]
layout_mode = 2
text = "Show older messages"
flat = true
theme_override_colors/font_color = Color(0.58, 0.608, 0.643, 1)
theme_override_font_sizes/font_size = 12

[node name="TypingIndicator" parent="VBox" instance=ExtResource("2")]
layout_mode = 2

[node name="Composer" parent="VBox" instance=ExtResource("3")]
layout_mode = 2
